##Text encoding: utf-8

2006-02-25  Jean Bréfort  <jean.brefort@normalesup.org>
	* gcu/dialog.cc: fixed message boxes.
	* programs/gchem3d-viewer.c: fixed --version option.
	* programs/gchemcalc.cc: ditto.

2006-02-20  Daniel Leidert  <daniel.leidert.spam@gmx.net>
	* Makefile.am: Fixed MAINTAINERCLEANFILES which missed two files.

2006-02-19  Daniel Leidert  <daniel.leidert.spam@gmx.net>
	* glade/Makefile.am: More cleaning.
	* mozilla-plugin/Makefile.am: Ditto.

2006-02-18  Daniel Leidert  <daniel.leidert.spam@gmx.net>
	* docs/reference/Makefile.am: Fixed a bug I introduced. Final changes.

2006-02-18  Daniel Leidert  <daniel.leidert.spam@gmx.net>
	* docs/reference/Makefile.am: If Doxygen is missing, result in an
	error message, which is only shown in this case. If doxygen exists, be
	quiet.

2006-02-18  Daniel Leidert  <daniel.leidert.spam@gmx.net>
	* Makefile.am: Cleaned up EXTRA_DIST. Minor change to
	DISTCHECK_CONFIGURE_FLAGS.
	* database/Makefile.am: Small clean-up.
	* programs/Makefile.am: Ditto. Because all programs use the same
	_LDADD suffix, we can safely use the global LDADD variable (makes 1
	line from 3)
	* tests/Makefile.am: Ditto. Further removed obsolete _DEPENDENCIES
	macro, because DEPS has the same value.
	* docs/reference/Makefile.am: Change the construct to install
	reference files a bit. Because of the usage of a stamp file, _DATA can
	be set to html/* and all files in html/ will be installed with this
	rule. So we can safely remove the user-written install/uninstall
	target for these files.

2006-02-16  Daniel Leidert  <daniel.leidert.spam@gmx.net>
	* gcu.pc.in: Added URL field.

2006-02-10  Jean Bréfort  <jean.brefort@normalesup.org>
	* tests/testgtkchem3dviewer.c: add a copyright.
	* tests/testgtkcrystalviewer.c: ditto.
	* tests/testgtkperiodic.c: ditto.

2006-02-09  Daniel Leidert  <daniel.leidert.spam@gmx.net>
	* configure.ac: Fixed a minor typo bug and cleaned up the source a
	bit.

2006-02-09  Jean Bréfort  <jean.brefort@normalesup.org>