@@ -1,4 +1,4 @@
-AC_INIT(gnome-chemistry-utils, 0.5.91)
+AC_INIT(gnome-chemistry-utils, 0.6.0)
 AC_CONFIG_SRCDIR(gcu/gtkperiodic.c)
 AM_INIT_AUTOMAKE([dist-bzip2])
 AM_MAINTAINER_MODE
@@ -60,7 +60,6 @@ gtkglext-1.0 >= $GTKGLEXT_REQUIRED_VERSION \
 libgnomeprintui-2.2 >= $GNOME_PRINT_REQUIRED_VERSION \
 gnome-vfs-2.0 >= $GNOME_VFS_REQUIRED_VERSION \
 libgoffice-1 >= $GNOME_OFFICE_REQUIRED_VERSION \
-chemical-mime-data >= $CHEMICAL_MIME_DATA_REQUIRED_VERSION \
 shared-mime-info >= $SHARED_MIME_INFO_REQUIRED_VERSION \
 openbabel-2.0 >= $OPENBABEL_REQUIRED_VERSION"
 
@@ -89,6 +88,13 @@ CFLAGS=$saved_cflags
 GCU_CFLAGS="$GCU_CFLAGS -Wall"
 AC_SUBST(GCU_CFLAGS)
 AC_SUBST(GCU_LIBS)
+
+dnl check for chemical-mime-data
+PKG_CHECK_MODULES(chemical_mime_data, \
+	chemical-mime-data >= $CHEMICAL_MIME_DATA_REQUIRED_VERSION, \
+	have_chemical_mime_data="yes", \
+	[have_chemical_mime_data="no", echo "no"])
+AM_CONDITIONAL(HAVE_CHEMICAL_MIME_DATA,test "$have_chemical_mime_data" = "yes")
 
 AC_LANG(C++)
 AC_MSG_CHECKING([for vector::at usability])
