@@ -1,5 +1,14 @@
 ##Text encoding: utf-8
 
+2006-02-26  Jean Bréfort  <jean.brefort@normalesup.org>
+	* Makefile.am: install mime types when chemical-mime-data is not there.
+	* autogen.sh: fixed typo.
+	* configure.ac: changed version to 0.6.0 and make chemical-mime-data
+	optional.
+	* docs/reference/Makefile.am: use *.* instead of * to avoid problems
+	with the CVS subdir.
+	* gcu/gtkcomboperiodic.h: fixed documentation.
+
 2006-02-25  Jean Bréfort  <jean.brefort@normalesup.org>
 	* gcu/dialog.cc: fixed message boxes.
 	* programs/gchem3d-viewer.c: fixed --version option.
